syntax="proto3";

package NUgc.NSchema;

message TModerationStatus {
    enum EType {
        IN_PROGRESS = 0;
        ACCEPTED = 1;
        DECLINED = 2;
    }
}

message TModerationReason {
    enum EType {
        NONE = 0;                    // unknown reason
        ABUSE = 1;
        NOT_OPINION = 2;
        OBSCENE = 3;
        WRONG_LANG = 4;
        TOO_SHORT = 5;
        PERSONAL_DATA = 6;
        ADVERTISMENT = 7;
        UPPERCASE = 8;
        SHORT_TEXT = 9;
        BUGREPORT = 10;
        WRONG_ORG = 11;
        EMPLOYER = 12;
        WITHOUT_PHONE = 13;
        NONPUBLIC_PROFILE = 14;
    }
}

message TTextDeclineReason {
    enum EType {
        NONE = 0;                    // unknown reason
        OBSCENE = 1;
        PERSONAL_DATA = 2;
        TOO_SHORT = 3;
        WRONG_LANG = 4;
        NOT_OPINION = 5;
        UPPERCASE = 6;
    }
}

message TReviewModerationData {
    TModerationStatus.EType Status = 1;
    TTextDeclineReason.EType DeclineReason = 2;
}

message TReviewModeration {
    TModerationStatus.EType Status = 1;
    string DeclineReason = 2;
}

message TPhotoModerationData {
    TModerationStatus.EType Status = 1;
}

message TPhotoModeration {
    TModerationStatus.EType Status = 1;
    string DeclineReason = 2;
}
