syntax = "proto3";

package NUgc.NSchema.NDirectUgc;

// java options
option java_package = "ru.yandex.kernel.ugc.protos.direct";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "kernel/ugc/proto/common/moderation.proto";

// Комментарий на отзыв клиента Директа
message TDirectReviewComment {

    enum EUserType {
        NONE = 0;
        CONTRACTOR = 1;
        YANDEX_SUPPORT = 2;
    }

    // (system, PK) идентификатор комментария к отзыву
    string CommentId = 1;
    // (system, parent PK) идентификатор исполнителя (ClientID в Директе фрилансера или агентства)
    string ContractorId = 2;
    // (system, parent PK) идентификатор отзыва
    string ReviewId = 3;
    // (system, id) UserID пользователя-автора комментария. В БД Директа: ppc.users.uid
    uint64 AuthorUserId = 4;
    // (system) время создания
    google.protobuf.Timestamp CreateTime = 11;
    // (system) время обновления
    google.protobuf.Timestamp UpdatedTime = 12;
    // (system) информация о результате модерации отзыва
    TReviewModerationData Moderation = 13;
    // (system) тип пользователя-автора. Влияет на отображение в интерфейсе и показ UserID
    EUserType AuthorUserType = 14;

    // (user) текстовый комментарий к отзыву о сотрудничестве
    string CommentText = 15;
}

